--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,11 +1,118 @@
+
 <div class="row">
   <div class="col-sm-6 col-md-4 border">
-    <div class="thumbnail ">
-    <img src="https://en.wikipedia.org/wiki/Gothic_(video_game)" alt="...">
+    <div class="thumbnail">
+      <div class="img-center text-center">
+        <img src="http://igg-games.com/wp-content/uploads/2015/12/Gothic-1-Free-Download.jpg" alt="..." class="img-responsive">
+      </div><br/>
     <div class="caption">
       <h3>Thumbnail label</h3>
-      <p>...</p>
-      <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-outline-primary" role="button">Button</a></p>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas sapiente, alias assumenda quae, voluptatum blanditiis magnam veniam maiores, sequi fugiat ipsum quo. Magnam praesentium, tenetur nobis dicta iure ea mollitia.</p>
+      <div>
+        <div class="clearfix">
+        <div class="price float-left">$12</div>
+        <a href="#" class="btn btn-success float-right" role="button">Button</a>
+        <a href="#" class="btn btn-outline-success float-right" role="button">Button</a>
+        </div>
+      </div>
+      <br/>
+    </div>
+  </div>
+  </div>
+  <div class="col-sm-6 col-md-4 border">
+    <div class="thumbnail">
+      <div class="img-center text-center">
+        <img src="http://igg-games.com/wp-content/uploads/2015/12/Gothic-1-Free-Download.jpg" alt="..." class="img-responsive">
+      </div><br/>
+    <div class="caption">
+      <h3>Thumbnail label</h3>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas sapiente, alias assumenda quae, voluptatum blanditiis magnam veniam maiores, sequi fugiat ipsum quo. Magnam praesentium, tenetur nobis dicta iure ea mollitia.</p>
+      <div>
+        <div class="clearfix">
+        <div class="price float-left">$12</div>
+        <a href="#" class="btn btn-success float-right" role="button">Button</a>
+        <a href="#" class="btn btn-outline-success float-right" role="button">Button</a>
+        </div>
+      </div>
+      <br/>
+    </div>
+  </div>
+  </div>
+  <div class="col-sm-6 col-md-4 border">
+    <div class="thumbnail">
+      <div class="img-center text-center">
+        <img src="http://igg-games.com/wp-content/uploads/2015/12/Gothic-1-Free-Download.jpg" alt="..." class="img-responsive">
+      </div><br/>
+    <div class="caption">
+      <h3>Thumbnail label</h3>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas sapiente, alias assumenda quae, voluptatum blanditiis magnam veniam maiores, sequi fugiat ipsum quo. Magnam praesentium, tenetur nobis dicta iure ea mollitia.</p>
+      <div>
+        <div class="clearfix">
+        <div class="price float-left">$12</div>
+        <a href="#" class="btn btn-success float-right" role="button">Button</a>
+        <a href="#" class="btn btn-outline-success float-right" role="button">Button</a>
+        </div>
+      </div>
+      <br/>
+    </div>
+  </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-6 col-md-4 border">
+    <div class="thumbnail">
+      <div class="img-center text-center">
+        <img src="http://igg-games.com/wp-content/uploads/2015/12/Gothic-1-Free-Download.jpg" alt="..." class="img-responsive">
+      </div><br/>
+    <div class="caption">
+      <h3>Thumbnail label</h3>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas sapiente, alias assumenda quae, voluptatum blanditiis magnam veniam maiores, sequi fugiat ipsum quo. Magnam praesentium, tenetur nobis dicta iure ea mollitia.</p>
+      <div>
+        <div class="clearfix">
+        <div class="price float-left">$12</div>
+        <a href="#" class="btn btn-success float-right" role="button">Button</a>
+        <a href="#" class="btn btn-outline-success float-right" role="button">Button</a>
+        </div>
+      </div>
+      <br/>
+    </div>
+  </div>
+  </div>
+  <div class="col-sm-6 col-md-4 border">
+    <div class="thumbnail">
+      <div class="img-center text-center">
+        <img src="http://igg-games.com/wp-content/uploads/2015/12/Gothic-1-Free-Download.jpg" alt="..." class="img-responsive">
+      </div><br/>
+    <div class="caption">
+      <h3>Thumbnail label</h3>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas sapiente, alias assumenda quae, voluptatum blanditiis magnam veniam maiores, sequi fugiat ipsum quo. Magnam praesentium, tenetur nobis dicta iure ea mollitia.</p>
+      <div>
+        <div class="clearfix">
+        <div class="price float-left">$12</div>
+        <a href="#" class="btn btn-success float-right" role="button">Button</a>
+        <a href="#" class="btn btn-outline-success float-right" role="button">Button</a>
+        </div>
+      </div>
+      <br/>
+    </div>
+  </div>
+  </div>
+  <div class="col-sm-6 col-md-4 border">
+    <div class="thumbnail">
+      <div class="img-center text-center">
+        <img src="http://igg-games.com/wp-content/uploads/2015/12/Gothic-1-Free-Download.jpg" alt="..." class="img-responsive">
+      </div><br/>
+    <div class="caption">
+      <h3>Thumbnail label</h3>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas sapiente, alias assumenda quae, voluptatum blanditiis magnam veniam maiores, sequi fugiat ipsum quo. Magnam praesentium, tenetur nobis dicta iure ea mollitia.</p>
+      <div>
+        <div class="clearfix">
+        <div class="price float-left">$12</div>
+        <a href="#" class="btn btn-success float-right" role="button">Button</a>
+        <a href="#" class="btn btn-outline-success float-right" role="button">Button</a>
+        </div>
+      </div>
+      <br/>
     </div>
   </div>
   </div>
