--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -12,7 +12,7 @@
         <div class="clearfix">
         <div class="price float-left">$12</div>
         <a href="#" class="btn btn-success float-right" role="button">Button</a>
-        <a href="#" class="btn btn-outline-success float-right" role="button">Button</a>
+        <a href="#" class="btn btn-outline-success float-right mr-sm-2" role="button">Button</a>
         </div>
       </div>
       <br/>
@@ -31,7 +31,7 @@
         <div class="clearfix">
         <div class="price float-left">$12</div>
         <a href="#" class="btn btn-success float-right" role="button">Button</a>
-        <a href="#" class="btn btn-outline-success float-right" role="button">Button</a>
+        <a href="#" class="btn btn-outline-success float-right mr-sm-2" role="button">Button</a>
         </div>
       </div>
       <br/>
@@ -50,7 +50,7 @@
         <div class="clearfix">
         <div class="price float-left">$12</div>
         <a href="#" class="btn btn-success float-right" role="button">Button</a>
-        <a href="#" class="btn btn-outline-success float-right" role="button">Button</a>
+        <a href="#" class="btn btn-outline-success float-right mr-sm-2" role="button">Button</a>
         </div>
       </div>
       <br/>
@@ -71,7 +71,7 @@
         <div class="clearfix">
         <div class="price float-left">$12</div>
         <a href="#" class="btn btn-success float-right" role="button">Button</a>
-        <a href="#" class="btn btn-outline-success float-right" role="button">Button</a>
+        <a href="#" class="btn btn-outline-success float-right mr-sm-2" role="button">Button</a>
         </div>
       </div>
       <br/>
@@ -90,7 +90,7 @@
         <div class="clearfix">
         <div class="price float-left">$12</div>
         <a href="#" class="btn btn-success float-right" role="button">Button</a>
-        <a href="#" class="btn btn-outline-success float-right" role="button">Button</a>
+        <a href="#" class="btn btn-outline-success float-right mr-sm-2" role="button">Button</a>
         </div>
       </div>
       <br/>
@@ -109,7 +109,7 @@
         <div class="clearfix">
         <div class="price float-left">$12</div>
         <a href="#" class="btn btn-success float-right" role="button">Button</a>
-        <a href="#" class="btn btn-outline-success float-right" role="button">Button</a>
+        <a href="#" class="btn btn-outline-success float-right mr-sm-2" role="button">Button</a>
         </div>
       </div>
       <br/>
