--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,119 +1,19 @@
-
-<div class="row">
-  <div class="col-sm-6 col-md-4 border">
-    <div class="thumbnail">
-      <div class="img-center text-center">
-        <img src="http://igg-games.com/wp-content/uploads/2015/12/Gothic-1-Free-Download.jpg" alt="..." class="img-responsive">
-      </div><br/>
-    <div class="caption">
-      <h3>Thumbnail label</h3>
-      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas sapiente, alias assumenda quae, voluptatum blanditiis magnam veniam maiores, sequi fugiat ipsum quo. Magnam praesentium, tenetur nobis dicta iure ea mollitia.</p>
-      <div>
-        <div class="clearfix">
-        <div class="price float-left">$12</div>
-        <a href="#" class="btn btn-success float-right" role="button">Button</a>
-        <a href="#" class="btn btn-outline-success float-right mr-sm-2" role="button">Button</a>
+{{# each products }}
+  <div class="row">
+    {{# each this }}
+    <div class="col-sm-6 col-md-4 border">
+      <div class="thumbnail">
+          <img src="{{ this.imagePath }}" alt="..." class="img-responsive">
+      <div class="caption">
+        <h3>{{ this.title }}</h3>
+        <p class="description">{{ this.description }}</p>
+          <div class="clearfix">
+          <div class="price pull-left">${{ this.price }}</div>
+          <a href="#" class="btn btn-success pull-right" role="button">Add to Cart</a>
+          </div>
         </div>
       </div>
-      <br/>
     </div>
-  </div>
-  </div>
-  <div class="col-sm-6 col-md-4 border">
-    <div class="thumbnail">
-      <div class="img-center text-center">
-        <img src="http://igg-games.com/wp-content/uploads/2015/12/Gothic-1-Free-Download.jpg" alt="..." class="img-responsive">
-      </div><br/>
-    <div class="caption">
-      <h3>Thumbnail label</h3>
-      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas sapiente, alias assumenda quae, voluptatum blanditiis magnam veniam maiores, sequi fugiat ipsum quo. Magnam praesentium, tenetur nobis dicta iure ea mollitia.</p>
-      <div>
-        <div class="clearfix">
-        <div class="price float-left">$12</div>
-        <a href="#" class="btn btn-success float-right" role="button">Button</a>
-        <a href="#" class="btn btn-outline-success float-right mr-sm-2" role="button">Button</a>
-        </div>
-      </div>
-      <br/>
+    {{/each}}
     </div>
-  </div>
-  </div>
-  <div class="col-sm-6 col-md-4 border">
-    <div class="thumbnail">
-      <div class="img-center text-center">
-        <img src="http://igg-games.com/wp-content/uploads/2015/12/Gothic-1-Free-Download.jpg" alt="..." class="img-responsive">
-      </div><br/>
-    <div class="caption">
-      <h3>Thumbnail label</h3>
-      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas sapiente, alias assumenda quae, voluptatum blanditiis magnam veniam maiores, sequi fugiat ipsum quo. Magnam praesentium, tenetur nobis dicta iure ea mollitia.</p>
-      <div>
-        <div class="clearfix">
-        <div class="price float-left">$12</div>
-        <a href="#" class="btn btn-success float-right" role="button">Button</a>
-        <a href="#" class="btn btn-outline-success float-right mr-sm-2" role="button">Button</a>
-        </div>
-      </div>
-      <br/>
-    </div>
-  </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-sm-6 col-md-4 border">
-    <div class="thumbnail">
-      <div class="img-center text-center">
-        <img src="http://igg-games.com/wp-content/uploads/2015/12/Gothic-1-Free-Download.jpg" alt="..." class="img-responsive">
-      </div><br/>
-    <div class="caption">
-      <h3>Thumbnail label</h3>
-      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas sapiente, alias assumenda quae, voluptatum blanditiis magnam veniam maiores, sequi fugiat ipsum quo. Magnam praesentium, tenetur nobis dicta iure ea mollitia.</p>
-      <div>
-        <div class="clearfix">
-        <div class="price float-left">$12</div>
-        <a href="#" class="btn btn-success float-right" role="button">Button</a>
-        <a href="#" class="btn btn-outline-success float-right mr-sm-2" role="button">Button</a>
-        </div>
-      </div>
-      <br/>
-    </div>
-  </div>
-  </div>
-  <div class="col-sm-6 col-md-4 border">
-    <div class="thumbnail">
-      <div class="img-center text-center">
-        <img src="http://igg-games.com/wp-content/uploads/2015/12/Gothic-1-Free-Download.jpg" alt="..." class="img-responsive">
-      </div><br/>
-    <div class="caption">
-      <h3>Thumbnail label</h3>
-      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas sapiente, alias assumenda quae, voluptatum blanditiis magnam veniam maiores, sequi fugiat ipsum quo. Magnam praesentium, tenetur nobis dicta iure ea mollitia.</p>
-      <div>
-        <div class="clearfix">
-        <div class="price float-left">$12</div>
-        <a href="#" class="btn btn-success float-right" role="button">Button</a>
-        <a href="#" class="btn btn-outline-success float-right mr-sm-2" role="button">Button</a>
-        </div>
-      </div>
-      <br/>
-    </div>
-  </div>
-  </div>
-  <div class="col-sm-6 col-md-4 border">
-    <div class="thumbnail">
-      <div class="img-center text-center">
-        <img src="http://igg-games.com/wp-content/uploads/2015/12/Gothic-1-Free-Download.jpg" alt="..." class="img-responsive">
-      </div><br/>
-    <div class="caption">
-      <h3>Thumbnail label</h3>
-      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas sapiente, alias assumenda quae, voluptatum blanditiis magnam veniam maiores, sequi fugiat ipsum quo. Magnam praesentium, tenetur nobis dicta iure ea mollitia.</p>
-      <div>
-        <div class="clearfix">
-        <div class="price float-left">$12</div>
-        <a href="#" class="btn btn-success float-right" role="button">Button</a>
-        <a href="#" class="btn btn-outline-success float-right mr-sm-2" role="button">Button</a>
-        </div>
-      </div>
-      <br/>
-    </div>
-  </div>
-  </div>
-</div>
+{{/each}}
